--- a/public/style.css
+++ b/public/style.css
@@ -2,3 +2,36 @@ body
 {
     text-align: center;
 }
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img-background
+{
+    width: 56.25rem;
+}
+
+.characters
+{
+    display: flex;
+    width: 900px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* background-color: aqua; */
+    justify-content: space-between;
+}
+
+.character
+{
+    width: 40%;
+    /* background-color: blue; */
+}
+
+.character > img
+{
+    width: 360px;
+    height: 267px;
+}
