--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,9 @@ body
     text-align: center;
     background-image: linear-gradient(to right, #141e30, #243b55);
     color: white;
+    
+    font-family: 'Rubik', sans-serif;
+    font-weight: 700;
 }
 
 
@@ -18,7 +21,45 @@ h2
 {
     font-size: 5rem;
     margin: 0;
-    
+}
+
+h3
+{
+    display: inline-block;
+    background-color: #066DEB;
+    padding: 2.5%;
+    border-radius: 10px;
+    margin-top: 30px;
+    margin-bottom: 0;
+    font-size: 1.5rem;
+}
+
+h4
+{
+    font-family: 'Merriweather', serif;
+    font-size: 1.3rem;
+    margin-bottom: 10px
+}
+
+p
+{
+    font-family: 'Merriweather', serif;
+    /* font-weight: 700; */
+}
+
+img{
+    display: block;
+}
+
+.nje
+{
+    width: 920px;
+}
+
+.anime-name
+{
+    background-color: #066DEB;
+    border-radius: 10px;
 }
 
 .anime-background
@@ -31,8 +72,7 @@ h2
 .anime-background:nth-child(even)
 {
     background-color: #112F99;
-    
-    
+     
 }
 
 .anime-background:nth-child(odd)
@@ -42,27 +82,119 @@ h2
 
 .img-background
 {
-    width: 900px;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.quote
+{
+    /* background-color:antiquewhite; */
+    display: inline-block;
+    width: 100%;
+}
+
+.left-quotation-mark, .right-quotation-mark
+{
+    /* display: inline-block; */
+    width: 40px;
+    background-color: white;
+    border-radius: 50%;
+    
+}
+
+.left-quotation-mark
+{
+    display: block;
+}
+
+
+.right-quotation-mark
+{
+    float: right;
+    transform: rotate(180deg);
+    
+}
+
+.quote-background
+{
+    background-color: #066DEB;
+    display: inline-block;
+    padding: 1%;
+    border-radius: 15px;
+    margin: 0 50px;
+}
+
+.quote-text
+{
+    font-size: 1rem;
 }
 
 .characters
 {
     display: flex;
-    width: 900px;
     flex-direction: row;
     flex-wrap: wrap;
     /* background-color: aqua; */
     justify-content: space-between;
+    /* margin: 0 20px; */
 }
 
 .character
 {
     width: 40%;
     /* background-color: blue; */
+    margin: 0 20px;
 }
 
 .character > img
 {
-    width: 360px;
+    /* width: 360px; */
+    width: 100%;
     height: 267px;
+}
+
+
+
+@media only screen and (max-width: 990px) {
+    .nje{
+        width: 95%;
+    }
+}
+
+@media only screen and (max-width: 915px) {
+    .character > img
+    {
+        /* width: 360px; */
+        /* width: 80%; */
+        height: 200px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .characters
+    {
+        display: flex;
+        flex-direction: column;
+        /* flex-wrap: wrap; */
+        /* background-color: aqua; */
+        /* justify-content: space-between; */
+        /* margin: 0 20px; */
+        align-items: center;
+    }
+
+    .character
+    {
+        width: 75%;
+        /* background-color: blue; */
+        margin: 0 20px;
+        
+    }
+
+    .character > img
+    {
+        /* width: 360px; */
+        /* width: 80%; */
+        height: 255px;
+    }
+
 }
