--- a/public/style.css
+++ b/public/style.css
@@ -72,11 +72,11 @@ hr
 
     border: none;
     width: 50%;
-    height: 50px;
+    height: 40px;
     /* border-bottom: 1px solid white; */
-    box-shadow: 0 20px 20px -20px white;
-    margin-top: 20px;
-    margin-bottom: 70px;
+    box-shadow: 0 10px 10px -10px white;
+    margin-top: 0;
+    margin-bottom: 40px;
 }
 
 figure
