--- a/public/style.css
+++ b/public/style.css
@@ -72,11 +72,11 @@ hr
 
     border: none;
     width: 50%;
-    height: 40px;
+    height: 50px;
     /* border-bottom: 1px solid white; */
-    box-shadow: 0 10px 10px -10px white;
-    margin-top: 0;
-    margin-bottom: 40px;
+    box-shadow: 0 20px 20px -20px white;
+    margin-top: 20px;
+    margin-bottom: 70px;
 }
 
 figure
@@ -244,7 +244,8 @@ a{
     }
 
     h4{
-        font-size: 1.1rem;
+        /* font-size: 1.1rem; */
+        font-size: 1rem;
     }
 
     p
@@ -253,8 +254,26 @@ a{
     }
 
     figcaption
+    {
+        font-size: 0.5rem;
+    }
+
+    hr
 {
-    font-size: 0.5rem;
+    /* border: 0px;
+    border-top: 10px dotted white;
+    width: 80%;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    opacity: 50% */
+
+    border: none;
+    width: 50%;
+    height: 40px;
+    /* border-bottom: 1px solid white; */
+    box-shadow: 0 10px 10px -10px white;
+    margin-top: 0;
+    margin-bottom: 40px;
 }
 
     .nje{
@@ -268,7 +287,8 @@ a{
 
     .quote-text
     {
-        font-size: 1rem;
+        /* font-size: 1rem; */
+        font-size: 0.8rem;
         letter-spacing: 0.01em;
     }
 
