--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="index.js"></script>
     <title>Anime</title>
   </head>
   
