--- a/public/style.css
+++ b/public/style.css
@@ -57,7 +57,7 @@ p
     line-height: 1.5;
 }
 
-img, object{
+img{
     display: block;
 }
 
@@ -124,16 +124,16 @@ a{
     background-color: #1C4E99;
 }
 
-object
+img
 {
     width: 100%; 
-    margin-bottom: 5px;
 }
 
 .anime-image
 {
-    width: 40%;
+    width: 100%;
     margin: 10px auto;
+    /* margin-bottom: 10px; */
 }
 
 /* Quote section */
@@ -182,23 +182,13 @@ object
     margin: 0 20px;
 }
 
-.character > figure > object 
+.character > figure > img 
 {
-    width: 100%;
     height: 267px;
-}
-
-.character > figure > object > img
-{
-    /* width: 100%;
-    height: 267px; */
-
-    width: 90%;
-    /* height: 267px; */
-    margin: 0px auto;
+    margin: 0 auto;
     margin-top: 18px;
+    margin-bottom: 5px;
 }
-
 
 
 
@@ -209,7 +199,7 @@ object
 }
 
 @media only screen and (max-width: 915px) {
-    .character > figure > object > img
+    .character > figure >  img
     {
         /* width: 360px; */
         /* width: 80%; */
@@ -242,7 +232,7 @@ object
         
     }
 
-    .character > figure > object > img
+    .character > figure > img
     {
         /* width: 360px; */
         /* width: 80%; */
